--- a/src/client/views/view/pages/index.html
+++ b/src/client/views/view/pages/index.html
@@ -1,4 +1,4 @@
-{% extends './layout.html' %}
+{% extends '../../common/layout.html' %}
 {% block title %}View{% endblock %}
 {% block content %}
 <div class="country-view">
