--- a/src/client/views/common/layout.html
+++ b/src/client/views/common/layout.html
@@ -17,52 +17,70 @@
 <body>
 
     <div class="wrap">
-        <nav id="w1" class="navbar-inverse navbar-fixed-top navbar">
-            <div class="container">
-                <div class="navbar-header"><button type="button" class="navbar-toggle" data-toggle="collapse"
-                        data-target="#w1-collapse"><span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span></button><a class="navbar-brand" href="#">My
-                        Application</a>
-                </div>
-                <div id="w1-collapse" class="collapse navbar-collapse">
-                    <ul id="w2" class="navbar-nav navbar-right nav">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">Login</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <x-header></x-header>
         <div class="container">
             <ul class="breadcrumb">
                 <li><a href="/">Home</a></li>
                 <li class="active">Books</li>
             </ul>
-            {% block content %}{% endblock %}
+            <div id="pjax-container">
+                {% block content %}{% endblock %}
+            </div>
         </div>
     </div>
 
-    <footer class="footer">
-        <div class="container">
-            <p class="pull-left">© My Company 2018</p>
-
-            <p class="pull-right">Powered by <a href="http://www.yiiframework.com/" rel="external">Yii Framework</a></p>
-        </div>
-    </footer>
+    <x-footer></x-footer>
 
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="/scripts/yii.js"></script>
     <script src="https://cdn.bootcss.com/twitter-bootstrap/4.2.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.bootcss.com/systemjs/2.1.1/system.min.js"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.js?features=default,fetch"></script>
+    <script src="https://cdn.bootcss.com/jquery.pjax/2.0.1/jquery.pjax.min.js"></script>
+    <script>
+        $(document).pjax('a', '#pjax-container')
+    </script>
+    <script src="https://cdn.bootcss.com/x-tag/1.5.11/x-tag-core.min.js"></script>
+    <script>
+        xtag.register('x-header', {
+    content: `<nav id="w1" class="navbar-inverse navbar-fixed-top navbar">
+    <div class="container">
+        <div class="navbar-header"><button type="button" class="navbar-toggle" data-toggle="collapse"
+                data-target="#w1-collapse"><span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span></button><a class="navbar-brand" href="#">My
+                Application</a>
+        </div>
+        <div id="w1-collapse" class="collapse navbar-collapse">
+            <ul id="w2" class="navbar-nav navbar-right nav">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Login</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>`
+})
+xtag.register('x-footer', {
+    content: `<footer class="footer">
+    <div class="container">
+        <p class="pull-left">© My Company 2018</p>
+        <p class="pull-right">Powered by <a href="http://www.yiiframework.com/" rel="external">Yii Framework</a></p>
+    </div>
+</footer>`
+})
+</script>
     <script type="module">
         import debounce from '/scripts/debounce.js'
         window.debounce = debounce
     </script>
-    <script nomodule src="/scripts/debounce.es5.js"></script>
+    <script nomodule>
+        // 需要利用webpack插件将ES6 Module编译为System.register格式
+        var debounce = System.import('/scripts/debounce.systemjs.js')
+        window.debounce = debounce
+    </script>
     {% block scripts %}{% endblock %}
 
 </body>
