--- a/src/client/views/common/layout.html
+++ b/src/client/views/common/layout.html
@@ -39,38 +39,8 @@
     <script>
         $(document).pjax('a', '#pjax-container')
     </script>
-    <script src="https://cdn.bootcss.com/x-tag/1.5.11/x-tag-core.min.js"></script>
-    <script>
-        xtag.register('x-header', {
-            content: `<nav id="w1" class="navbar-inverse navbar-fixed-top navbar">
-            <div class="container">
-                <div class="navbar-header"><button type="button" class="navbar-toggle" data-toggle="collapse"
-                        data-target="#w1-collapse"><span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span></button><a class="navbar-brand" href="#">My
-                        Application</a>
-                </div>
-                <div id="w1-collapse" class="collapse navbar-collapse">
-                    <ul id="w2" class="navbar-nav navbar-right nav">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">Login</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>`
-        })
-        xtag.register('x-footer', {
-            content: `<footer class="footer">
-            <div class="container">
-                <p class="pull-left">© My Company 2018</p>
-                <p class="pull-right">Powered by <a href="http://www.yiiframework.com/" rel="external">Yii Framework</a></p>
-            </div>
-        </footer>`
-        })
-    </script>
+    <script src="https://cdn.bootcss.com/x-tag/2.0.9-alpha/x-tag-polyfilled.min.js"></script>
+    <script src="/scripts/xtag-init.js"></script>
     <script type="module">
         import debounce from '/scripts/debounce.js'
         window.debounce = debounce
