--- a/src/client/views/create/pages/index.html
+++ b/src/client/views/create/pages/index.html
@@ -17,8 +17,8 @@
 </div>
 {% endblock %}
 {% block scripts %}
-<script src="/scripts/yii.validation.js"></script>
-<script src="/scripts/yii.activeForm.js"></script>
+<script async src="/scripts/yii.validation.js"></script>
+<script async src="/scripts/yii.activeForm.js"></script>
 <script>
     jQuery(function ($) {
         jQuery('#w0').yiiActiveForm([{
