add x-create component

--- a/src/client/views/common/layout.html
+++ b/src/client/views/common/layout.html
@@ -40,7 +40,7 @@
         $(document).pjax('a', '#pjax-container')
     </script>
     <script src="https://cdn.bootcss.com/x-tag/2.0.9-alpha/x-tag-polyfilled.min.js"></script>
-    <script src="/scripts/xtag-init.js"></script>
+    <script async src="/scripts/xtag-init.js"></script>
     <script type="module">
         import debounce from '/scripts/debounce.js'
         window.debounce = debounce
