split x-tag elements

--- a/src/client/views/create/pages/index.html
+++ b/src/client/views/create/pages/index.html
@@ -15,6 +15,7 @@
             <button type="submit" class="btn btn-success">Save</button> </div>
     </div>
 </div>
+<!--injectjs-->
 {% endblock %}
 {% block scripts %}
 <script async src="/scripts/yii.validation.js"></script>
