--- a/src/client/views/update/pages/index.html
+++ b/src/client/views/update/pages/index.html
@@ -20,6 +20,7 @@
             <button type="submit" class="btn btn-success">Save</button> </div>
     </div>
 </div>
+<!--injectjs-->
 {% endblock %}
 {% block scripts %}
 <script src="/scripts/yii.validation.js"></script>
