--- a/src/client/views/common/layout.html
+++ b/src/client/views/common/layout.html
@@ -17,7 +17,7 @@
 <body>
 
     <div class="wrap">
-        <x-header></x-header>
+        {% include '../../components/Header/header.html' %}
         <div class="container">
             <ul class="breadcrumb">
                 <li><a href="/">Home</a></li>
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    <x-footer></x-footer>
+    {% include '../../components/Footer/footer.html' %}
 
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script async src="/scripts/yii.js"></script>
@@ -40,7 +40,6 @@
         $(document).pjax('a', '#pjax-container')
     </script>
     <script src="https://cdn.bootcss.com/x-tag/2.0.9-alpha/x-tag-polyfilled.min.js"></script>
-    <script async src="/scripts/xtag-init.js"></script>
     <script type="module">
         import debounce from '/scripts/debounce.js'
         window.debounce = debounce
